--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   google_generative_ai: ^0.4.0
   
   # File Handling
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
   
@@ -69,15 +69,15 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   webview_flutter: ^4.5.0
   
-  # TTS & STT
-  flutter_tts: ^4.0.2
-  speech_to_text: ^6.6.0
+  # TTS & STT - Currently disabled due to Android 16 incompatibility
+  # flutter_tts: ^4.2.3
+  # speech_to_text: ^6.6.0
   
   # Utils
   uuid: ^4.3.3
   intl: ^0.19.0
   url_launcher: ^6.2.4
-  share_plus: ^7.2.2
+  share_plus: ^10.0.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
