--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Google Fonts for Japanese text support
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
